--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/SchoolLibrary.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.derby.jar=/home/amine/glassfish-4.1.1/javadb/lib/derby.jar
+file.reference.derbyclient.jar=/home/amine/glassfish-4.1.1/javadb/lib/derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.derby.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
